# ux-skill

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-TW.md  README.zh.md  SECURITY.md  SKILL.md  package.json  pyproject.toml
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  showcase.md
.github/workflows/: codeql.yml  test.yml
.ux/: last-discovery.json  last-recommendation.json
.ux/design-system/: MASTER.md
agents/: copy-writer.md  design-system-architect.md  frontend-engineer.md
commands/: ux-a11y.md  ux-audit.md  ux-case-study.md  ux-component.md  ux-copy.md  ux-critique.md  ux-dashboard.md  ux-design.md  ux-discover.md  ux-evolve.md  ux-expert.md  ux-fix.md  ux-frame.md  ux-image-to-code.md  ux-init.md  ux-lint.md  ux-mcp.md  ux-motion.md  ux-next.md  ux-polish.md  ux-recommend.md  ux-research.md  ux-stats.md  ux-system.md  ux-workshop.md
data/: PHASE-PLAN.md  SCHEMAS.md  anti-patterns.json  components.json  industries.json  landing-patterns.json  styles.json
data/brands/: 1password.json  _index.json  adidas.json  aesop.json  airbnb.json  airtable.json  allbirds.json  aman-resorts.json  amazon.json  apple-music.json  apple.json  asana.json  atlantic.json  audi.json  bentley.json  binance.json  bloomberg.json  bmw-m.json  bmw.json  booking-com.json  bose.json  brave.json  brex.json  bugatti.json  cal.json  claude.json  clay.json  clickhouse.json  cloudflare.json  cohere.json  coinbase.json  composio.json  cursor.json  datadog.json  dbt.json  dezeen.json  disney-plus.json  (+118 more)
demo/: dot-landing-self-review.md  dot-landing.blade.php  dot-landing.html
docs/: 2026-05-24-ux-plugin-design.md  CNAME  about.html  anti-patterns.html  brand-identity.md  brands.html  commands.html  compare.html  design-systems.html  faq.html  home-v31-preview.html  home-v31-scene.html  how-to-add-a-design-system-to-claude-code.html  how-to-tell-if-a-website-was-ai-generated.html  index-classic.html  index.html  launch-pack.md  mcp.html  nav-preview.html  privacy.html  roadmap.html  showcase.html  sitemap.xml  what-is-ai-slop.html
engine/: __init__.py  data_loader.py  integration.py
landing/: about.html  anti-patterns.html  commands.html  compare.html  faq.html  index.html  mcp.html  privacy.html  roadmap.html  robots.txt  showcase.html  sitemap.xml
scripts/: _navtest.html  add-related-reads.py  apply_canonical_nav.py  backfill-brand-designs.py  build-anti-patterns-page.py  build-brands-page.py  build-commands-page.py  build-i18n-homepages.py  build-locale-blog-indexes.py  build-post-hreflang.py  build-sitemap.py  build_design_systems.py  build_i18n_json.py  canonical_nav.py  force-dark-theme.py  generate-hero-video.py  generate-og-images.py  generate-showcase-images.py  i18n-strings.json  inject-analytics.py  inject-noscroll.py  og-card.html  og-square.html  process-editorial-photos.py  render-og-pages.mjs  render-og.mjs  strip-skip-link.py  sweep-stats.py  unify-nav.py  verify-responsive.mjs  wire-og-images.py
tests/: conftest.py  test_arabic_typography.py  test_brand.py  test_brand_wiring.py  test_cli_brand.py  test_data_validation.py  test_decisions.py  test_design_md.py  test_evaluator.py  test_evolve.py  test_generator.py  test_i18n_leaks.py  test_image_extract.py  test_installer.py  test_layout.py  test_linter.py  test_mcp.py  test_page_sequence.py  test_persist.py  test_recommender.py  test_smoke.py  test_synthesizer.py  test_system_pack.py  test_typography.py  test_v3_fixes.py
uxskill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
wiki-staging/: All-17-Commands.md  All-5-Sub-Agents.md  Anti-AI-slop-ban-list.md  Discovery-Protocol.md  Don-Normans-design-principles-applied.md  Frontend-stacks-compared.md  Home.md  How-to-add-motion-that-doesnt-break-Core-Web-Vitals.md  How-to-audit-accessibility-with-Claude-Code.md  How-to-build-a-SaaS-landing-page-with-Claude-Code.md  How-to-design-a-dashboard-with-Claude-Code.md  How-to-detect-AI-slop-in-your-design.md  How-to-fix-AI-generated-UI.md  How-to-fix-microcopy-that-sounds-like-AI.md  How-to-generate-a-design-system-with-Claude-Code.md  How-to-make-AI-output-look-human-grade.md  How-to-ship-a-case-study-from-product-data.md  Installation.md  Krug-3-Laws-of-Usability-with-examples.md  Polaris-style-audit-reports.md  Real-life-UX-consulting.md  The-30-Laws-of-UX.md  The-6-Audit-Lenses.md  The-creative-arsenal-pattern-library.md  Wfrah-style-case-study-format.md
(+467 files in other folders)
