[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uxskill"
version = "3.1.0"
description = "Design intelligence engine for AI coding assistants. Deterministic anti-AI-slop linter (152 rules), mandatory discovery, 5-parallel-search recommender, 1,243 entries across 12 manifests, 160 brand DESIGN specs, MCP server. Runs in Claude Code, Cursor, Windsurf, and 14 more IDEs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Laith Aljunaidy", email = "laith.aljunaidy.laith@gmail.com" }
]
keywords = [
  "ux", "ui", "design-system", "ai-coding", "claude-code", "cursor",
  "windsurf", "linter", "design", "frontend", "anti-ai-slop"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "click>=8.1.8",
  "rich>=15.0.0",
  "pydantic>=2.13.4",
  "tomli>=2.0;python_version<'3.11'"
]

[project.optional-dependencies]
# Optional MCP transport. The `mcp` Python package requires Python 3.10+,
# so the env marker keeps `pip install 'uxskill[mcp]'` from blowing up on
# 3.9 with a confusing "no matching distribution" error.
mcp = [
  "mcp>=1.0; python_version >= '3.10'"
]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.17",
  "mypy>=1.19.1",
  "black>=25.11.0",
  # MCP transport is optional in dev too — guarded by Python version so
  # CI's 3.9 matrix entry can still install dev deps for non-MCP testing.
  "mcp>=1.0; python_version >= '3.10'"
]

[project.urls]
Homepage = "https://uxskill.laithjunaidy.com"
Repository = "https://github.com/Laith0003/ux-skill"
Issues = "https://github.com/Laith0003/ux-skill/issues"
Documentation = "https://uxskill.laithjunaidy.com"

[project.scripts]
ux = "engine.cli.main:cli"
uxskill = "engine.cli.main:cli"
ux-mcp = "engine.mcp.server:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]

[tool.setuptools.package-data]
"engine" = ["../data/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
